net: Check if URL has query parameters

When using the GrlNet mock, we could need to skip some of the query
parameters in the URL.

This commit cover the case of having an URL without any query parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=706805